--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "koa": "^2.8.2",
+    "koa-bodyparser": "^2.5.0",
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
